first api commit

--- a/frontend/src/components/navbar/Navbar.scss
+++ b/frontend/src/components/navbar/Navbar.scss
@@ -30,6 +30,7 @@
     .logo {
       font-size: 34px;
       font-weight: bold;
+      font-family: 'Montserrat', sans-serif;
 
       .dot {
         font-weight: bold;
