--- a/frontend/src/pages/gig/Gig.scss
+++ b/frontend/src/pages/gig/Gig.scss
@@ -294,3 +294,98 @@
     }
   }
 }
+
+.reviews {
+  margin-top: 50px;
+
+  .add {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .addForm {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+
+      input {
+        padding: 20px;
+      }
+
+      select {
+        width: 200px;
+        padding: 20px;
+        align-self: flex-end;
+      }
+      button {
+        align-self: flex-end;
+        width: 100px;
+        border: none;
+        padding: 10px;
+        color: white;
+        background-color: #1dbf73;
+        cursor: pointer;
+      }
+    }
+  }
+
+  hr {
+    height: 0;
+    border: 0.5px solid lightgray;
+    margin: 50px 0px;
+  }
+}
+
+.review {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 20px 0px;
+  .user {
+    display: flex;
+    align-items: center;
+    .pp {
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+    }
+
+    .country {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: gray;
+
+      img {
+        width: 20px;
+      }
+    }
+  }
+
+  .stars {
+    display: flex;
+    gap: 5px;
+
+    img {
+      height: 14px;
+      width: 14px;
+    }
+
+    span {
+      font-size: 14px;
+      font-weight: bold;
+      color: #ffc108;
+    }
+  }
+
+  .helpful {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    img {
+      width: 14px;
+    }
+  }
+}
